--- a/AirLocatorSwift/Info.plist
+++ b/AirLocatorSwift/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>YOUR MESSAGE</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>YOUR MESSAGE</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>YOUR MESSAGE</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
